--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,13 @@ body, html {
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 100%;
-  color: #424242;
+  color: #5E5E5E;
 }
 
 h1, h2, h3, h4, h5 {
   margin: 0; 
+  font-weight: normal;
+  font-size: 100%;
 }
 
 ul {
@@ -28,13 +30,7 @@ ul {
  */
 header {
 	width: 100%;
-	max-width: 50em;
-	margin: 0 auto;
 	border-bottom: 1px solid #FEEA3A;
-	display: flex;
-    display: -webkit-flex;
-    flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
 }
 
 .header__logo {
@@ -43,6 +39,13 @@ header {
 	display: flex;
 	display: -webkit-flex;
 	justify-content: center;
+}
+
+.header__logo h1 {
+	color: #FFF;
+	letter-spacing: 0.5em;
+	text-transform: lowercase;
+	margin-bottom: -4px;
 }
 
 .header__logo img {
@@ -59,6 +62,8 @@ header {
  */
 nav {
 	width: 100%;
+	max-width: 50em;
+	margin: 0 auto;
 }
 
 nav ul {
@@ -70,7 +75,6 @@ nav ul {
 }
 
 nav li {
-	display: inline-block;
 	text-transform: uppercase;
 	padding: 1em;	
 }
@@ -85,3 +89,47 @@ nav li a:hover {
 	background-color: #FFEB3B;
 	color: #AFA54D;
 } 
+
+/*
+ *
+ * Main
+ *
+ */
+
+main {
+  width: 100%;
+  max-width: 50em;
+  margin: 0 auto;
+}
+
+main h2 {
+	text-transform: lowercase;
+	padding: 0.5em;
+	color: #AFAFAF;
+	font-family: georgia, serif;
+	font-style: italic;
+	letter-spacing: 0.2em;
+}
+
+.post-card {
+	padding: 1em;
+	line-height: 1.5;
+}
+
+.post-card h3 {
+	font-weight: bold;
+	font-size: 1.2em;
+}
+
+.post-card h3 a {
+	color: #5E5E5E;
+	text-decoration: none;
+}
+
+.post-card h3 a:hover {
+	border-bottom: 2px solid #00BEA4;
+}
+
+.post-card p {
+	font-family: georgia, serif;	
+}
